# clice

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  404.html  CMakeLists.txt  README.md  hashmap.json  index.html  pixi.toml  tombi.toml  xmake.lua
tests/: conftest.py  pyproject.toml  pytest.ini  replay.py
tests/data/clang_tidy/: clice.toml
tests/data/config_rules_no_config/: main.cpp
tests/data/config_rules_toml/: clice.toml  main.cpp
tests/data/document_links/: header_a.h  header_b.h  header_c.h  main.cpp
tests/data/header_context/: inner.h  main.cpp  types.h  utils.h
tests/data/hello_world/: main.cpp
tests/data/include_completion/: myheader.h
tests/data/include_completion/subdir/: nested.h
tests/data/index_features/: CMakeLists.txt  main.cpp
tests/data/modules/chained_modules/: CMakeLists.txt  mod_a.cppm  mod_b.cppm
tests/data/modules/circular_module_dependency/: CMakeLists.txt  cycle_a.cppm  cycle_b.cppm  ok.cppm
tests/data/modules/class_export_and_inheritance/: CMakeLists.txt  circle.cppm  shape.cppm
tests/data/modules/consumer_imports_module/: CMakeLists.txt  main.cpp  math.cppm
tests/data/modules/deep_chain/: CMakeLists.txt  m1.cppm  m2.cppm  m3.cppm  m4.cppm  m5.cppm
tests/data/modules/diamond_modules/: CMakeLists.txt  base.cppm  left.cppm  right.cppm  top.cppm
tests/data/modules/dotted_module_name/: CMakeLists.txt  app.cppm  io.cppm
tests/data/modules/export_block/: CMakeLists.txt  block.cppm  consumer.cppm
tests/data/modules/export_namespace/: CMakeLists.txt  calc.cppm  ns.cppm
tests/data/modules/global_module_fragment/: CMakeLists.txt  gmf.cppm  legacy.h
tests/data/modules/gmf_with_import/: CMakeLists.txt  base.cppm  combined.cppm  util.h
tests/data/modules/hover_on_imported_symbol/: CMakeLists.txt  defs.cppm  use.cpp
tests/data/modules/independent_modules/: CMakeLists.txt  x.cppm  y.cppm
tests/data/modules/module_compile_error/: CMakeLists.txt  bad.cppm  good.cppm
tests/data/modules/module_implementation_unit/: CMakeLists.txt  greeter.cppm  greeter_impl.cpp
tests/data/modules/module_partitions/: CMakeLists.txt  lib.cppm  part_a.cppm  part_b.cppm
tests/data/modules/no_modules_plain_cpp/: CMakeLists.txt
tests/data/modules/partition_chain/: CMakeLists.txt  core.cppm  sys.cppm  types.cppm
tests/data/modules/partition_interface/: CMakeLists.txt  part.cppm  primary.cppm
tests/data/modules/partition_with_external_import/: app.cppm  (+3 more)
tests/data/multi_context/: main.cpp
tests/data/pch_test/: common.h  main.cpp  no_includes.cpp
tests/fixtures/: client.py
tests/integration/: test_file_operation.py  test_header_context.py  test_import_completion.py  test_include_completion.py  test_index.py  test_lifecycle.py  test_modules.py  test_pch.py  test_persistent_cache.py  test_rapid_edit.py  test_server.py  test_staleness.py
tests/integration/agentic/: test_agentic.py  test_cli.py
tests/integration/compilation/: test_pch.py  test_persistent_cache.py  test_staleness.py
tests/integration/extensions/: test_header_context.py
tests/integration/features/: test_completion.py  test_document_links.py  test_formatting.py  test_index.py  test_server.py
tests/integration/lifecycle/: test_config.py  test_file_operation.py  test_lifecycle.py
tests/integration/modules/: test_modules.py
tests/integration/stress/: test_rapid_edit.py
tests/integration/utils/: __init__.py  assertions.py  cache.py  client.py  wait.py  workspace.py
tests/smoke/: rapid_edit.jsonl  session.jsonl
tests/unit/: unit_tests.cc
tests/unit/AST/: ResolverTests.cpp  Selection.cpp  SelectionTests.cpp  SourceCodeTests.cpp
tests/unit/Async/: EventTests.cpp  FileSystemTests.cpp  GatherTests.cpp  LockTests.cpp  SleepTests.cpp  TaskTests.cpp  ThreadPoolTests.cpp
tests/unit/Compiler/: Command.cpp  CommandTests.cpp  Compiler.cpp  CompilerTests.cpp  DiagnosticTests.cpp  DirectiveTests.cpp  ModuleTests.cpp  Preamble.cpp  PreambleTests.cpp  Tidy.cpp  TidyTests.cpp  Toolchain.cpp  ToolchainTests.cpp
tests/unit/Feature/: CodeCompletionTests.cpp  DocumentLinkTests.cpp  DocumentSymbolTests.cpp  FoldingRangeTests.cpp  FormattingTests.cpp  HoverTests.cpp  InlayHintTests.cpp  SemanticTokenTests.cpp  SignatureHelpTests.cpp
tests/unit/Index/: MergedIndex.cpp  MergedIndexTests.cpp  TUIndex.cpp  TUIndexTests.cpp  USR.cpp  USRTests.cpp
tests/unit/Server/: ActiveFileManagerTests.cpp
tests/unit/Support/: BinaryTests.cpp  CompareTests.cpp  DoxygenTests.cpp  EnumTests.cpp  GlobPatternTests.cpp  JSONTests.cpp  StructTests.cpp  StructedText.cpp  StructedTextTests.cpp
tests/unit/Test/: Annotation.cpp  Runner.cpp  Tester.cpp
tests/unit/command/: argument_parser_tests.cpp  command_tests.cpp  search_config_tests.cpp  toolchain_provider_tests.cpp  toolchain_tests.cpp
tests/unit/compile/: command_tests.cpp  compilation_tests.cpp  diagnostic_tests.cpp  directive_tests.cpp  tidy_tests.cpp  toolchain_tests.cpp
tests/unit/feature/: code_completion_tests.cpp  document_link_tests.cpp  document_symbol_tests.cpp  folding_range_tests.cpp  formatting_tests.cpp  hover_tests.cpp  inlay_hint_tests.cpp  semantic_tokens_tests.cpp  signature_help_tests.cpp
tests/unit/index/: index_query_tests.cpp  merged_index_tests.cpp  project_index_tests.cpp  tu_index_tests.cpp  usr_tests.cpp
tests/unit/semantic/: resolver_tests.cpp  selection_tests.cpp  template_resolver_tests.cpp
tests/unit/server/: compile_graph_integration_tests.cpp  compile_graph_tests.cpp  config_tests.cpp  module_worker_tests.cpp  pch_worker_tests.cpp  stateful_worker_tests.cpp  stateless_worker_tests.cpp  worker_test_helpers.h
tests/unit/support/: doxygen_tests.cpp  format_tests.cpp  glob_pattern_tests.cpp  structed_text_tests.cpp
tests/unit/syntax/: completion_tests.cpp  dependency_graph_tests.cpp  include_resolver_tests.cpp  lexer_tests.cpp  module_import_tests.cpp  module_scan_fixture.h  module_scan_tests.cpp  scan_tests.cpp
tests/unit/test/: annotation.cpp  annotation.h  cdb_helper.h  platform.h  temp_dir.h  test.h  tester.cpp  tester.h
(+461 files in other folders)
